added url and baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ author: Sai Sruti Sitharaman
 email: your-saisruti1229@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A website about me! 
- url:'https://saisruti1229.github.io/'
- baseurl: 'github-pages-with-jekyll/'
+baseurl: "/github-pages-with-jekyll_blog" 
+url: "https://saisruti1229.github.io"
 
 # social links
 instagram_username: sruti2912 # DO NOT include the @ character, or else the build will fail!
