changed repo name

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ author: Sai Sruti Sitharaman
 email: your-saisruti1229@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A website about me! 
-baseurl: "/github-pages-with-jekyll" 
+baseurl: "/Sruti" 
 url: "https://saisruti1229.github.io"
 
 # social links
