--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ plugins:
   - jekyll-feed
 title: My Website 
 author: Sai Sruti Sitharaman
-email: your-saisruti1229@gmail.com
+email: saisruti1229@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A website about me! 
 baseurl: "/Sruti" 
